fixed overflow with too many tags in ProposalPreview

--- a/src/components/ProposalPreview/ProposalPreview.css
+++ b/src/components/ProposalPreview/ProposalPreview.css
@@ -46,7 +46,7 @@ a:visited {
 }
 
 .tag {
-  margin: 0 2px;
+  margin: 0 2px 2px;
   padding: 0 2px;
   border: solid 1px gray;
   border-radius: 3px;
